--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   <h3 class="section-item-title-1">adresse</h3>
                   <!-- /Subtitle -->
                   <!-- content -->
-                  <p>7 Rue du président Kennedy - 28110 Lucé</p>
+                  <p>Rue du président Kennedy - 28110 Lucé</p>
                   <!-- /Content -->
                 </div>
               </div>
@@ -1332,7 +1332,7 @@
                     <!-- Contact infos -->                 
                     <div class="col-md-4 contact-infos">
                       <h4 class="contact-subtitle-1">Addresse</h4>
-                      <p>7 rue du président Kennedy, 28110 - Lucé - FRANCE</p>
+                      <p>Rue du président Kennedy, 28110 - Lucé - FRANCE</p>
                       <h4 class="contact-subtitle-1">telephone</h4>
                       <p>06.18.60.93.06</p>
                       <h4 class="contact-subtitle-1">Email</h4>
