--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <h2 class="intro-title2">Developpeur Web</h2>
           <!-- /job -->
           <!-- Description -->
-          <p>RECHERDE DE STAGE pour la période du 21/09/20 au 27/11/20</p>
+          <p>RECHERDE D'EMPLOI A PARTIER DU 12/12/2020</p>
           <!-- /Description -->
         </div>
         <!-- /Right Collum -->
